binrw/tests/ui/conflicting_keyword_passed_args.stderr
error: conflicting args keyword
 --> $DIR/conflicting_keyword_passed_args.rs:7:19
  |
7 |     #[br(args(0), args_raw = (a, ))]
  |                   ^^^^^^^^
